--- a/src/style.css
+++ b/src/style.css
@@ -276,6 +276,11 @@ button:focus {
   /* padding-left: 50px !important; */
 }
 
+.sheading {
+  font-size: 2.0em !important;
+  /* padding-left: 50px !important; */
+}
+
 
 .petition {
   font-size: 2.1em !important;
