--- a/src/style.css
+++ b/src/style.css
@@ -260,7 +260,8 @@ button:focus {
   z-index: 0;
   background-image: var(--image-gradient), url(./Assets/home-bg.jpg);
   background-position: top center;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
+
   padding-bottom: 0 !important;
   padding-top: 0 !important;
 }
