--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,7 +1,8 @@
-image {
-    /* max-width: 50%; */
-    /* max-height: 50%; */
-    /* width: min-content; */
-    /* width: 30px; */
+.image {
+    max-width: 500px;   
+    max-height:500px;
+    width:auto;
+    height:auto;
+
    
 }
