--- a/src/style.css
+++ b/src/style.css
@@ -295,6 +295,14 @@ button:focus {
   /* padding-left: 50px !important; */
 }
 
+@media (max-width: 767px) {
+  
+  .petition{
+    font-size: 1.6em !important;
+  }
+}
+
+
 .heading-name {
   font-size: 2.5em !important;
   padding-left: 45px !important;
