--- a/src/style.css
+++ b/src/style.css
@@ -290,13 +290,12 @@ button:focus {
 
 
 .petition {
-  font-size: 2.1em !important;
+  font-size: 2.1em;
   padding-bottom: 25px !important;
   /* padding-left: 50px !important; */
 }
 
-@media (max-width: 767px) {
-  
+@media (max-width: 1200px) {
   .petition{
     font-size: 1.6em !important;
   }
