--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,10 @@ html {
   --imp-text-color: #c770f0;
 }
 
+.red {
+  color: #b10000
+}
+
 .purple {
   color: var(--imp-text-color) !important;
 }
